# yfinance-mcp-server

./: .dockerignore  .env.example  .gitignore  .pylintrc  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml  lint.yml  pylint.yml  release.yml  tests.yml
docs/: API_MAPPING.md  DEVELOPMENT.md  PROJECT_SPEC.md  USER_GUIDE.md
examples/: QUERIES.md  lmstudio_config.json.example  lmstudio_config.venv.json.example
scripts/: benchmark_baseline.py
src/yfinance_mcp/: __init__.py  cache.py  logging_utils.py  schemas.py  server.py  utils.py  wrapper.py
tests/: test_internal_coverage.py  test_live_api_matrix.py  test_live_integration.py  test_perf.py  test_serialization.py  test_tools.py  test_transport.py  test_wrapper.py
